# comp-geom

./: .clang-format  .gitignore  README.md
affine/: affine.c  coinc.in  colin.in  hor.in
convex-hull/: chull.c  data.c  data.h  gen-rand.py  gen-rnd.py  meson.build  qsort.c  qsort.h  rand.py  s1.out  s2.in  s3.in  s4.in  s4.out  sq.in  sq1.in  stack.c  stack.h
convex-polygon/: cp.in  cp1.in  cp2.in  cpoly.c  mix.in  non-sq1.in
convex-polygon-inclusion/: gen-rnd.py  meson.build  q1.in  q2.in  q3.in  q4.in  q5.in  q6.in  qt1.in
convex-search/: gen-cp.py  meson.build
polygon-inclusion/: gen-rnd.py  meson.build  p1.in  p2.in  pinc.c  q1.in  q4.in  q5.in  qt2.in
w1-affine/: affine.c  gen-rnd.py  mix.in  small.in  vert.in
w2-convex-polygon/: cpoly.c  gen-cp.py  gen-rnd.py  non-sq2.in  non-sq3.in
w3-polygon-inclusion/: gen-rnd.py  p3.in  pinc.c  pt.in  qt0.in
w4-convex-hull/: chull.c  chull.py  data.c  data.h  gen-rnd.py  qsort.c  sq1.in  stack.c
w5-convex-search/: meson.build  meson.format
w5-convex-search/bench/: bm-main.cpp  meson.build
w5-convex-search/scripts/: gen-rnd.py
w5-convex-search/src/: common.h  io.cpp  io.h  main.cpp  meson.build  search.cpp  search.h
w5-convex-search/test/: meson.build  s.in  tst-main.cpp
w6-segment-intersections/: meson.build
w6-segment-intersections/scripts/: gen-rnd.py
w7-dcel/: meson.build
